// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Capacity /> renders correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title"
    >
      Cluster Capacity
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-capacity__items"
    >
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          CPU
        </h2>
        <h6>
          2.1 Ghz available out of 4.3 Ghz
        </h6>
        <div>
          <div
            class=" donut-chart-pf"
          />
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          Memory
        </h2>
        <h6>
          120 Ti available out of 200 Ti
        </h6>
        <div>
          <div
            class=" donut-chart-pf"
          />
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          Storage
        </h2>
        <h6>
          400 Ti available out of 800 Ti
        </h6>
        <div>
          <div
            class=" donut-chart-pf"
          />
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          Network
        </h2>
        <h6>
          7 GBps available out of 10 GBps
        </h6>
        <div>
          <div
            class=" donut-chart-pf"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Capacity /> renders correctly in Loading state 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title"
    >
      Cluster Capacity
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-capacity__items"
    >
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          CPU
        </h2>
        <div>
          <div
            class="spinner spinner-md blank-slate-pf-icon"
          />
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          Memory
        </h2>
        <div>
          <div
            class="spinner spinner-md blank-slate-pf-icon"
          />
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          Storage
        </h2>
        <div>
          <div
            class="spinner spinner-md blank-slate-pf-icon"
          />
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <h2
          class="kubevirt-capacity__item-title"
        >
          Network
        </h2>
        <div>
          <div
            class="spinner spinner-md blank-slate-pf-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
